# blang

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
blang/: Cargo.toml
blang/src/: codegen.rs  diagnostics.rs  lexer.rs  main.rs
blang/src/ast/: node.rs  print.rs  visit.rs
blang/src/lexer/: interner.rs
blang/src/parser/: test.rs
comptest/: Cargo.toml
comptest/src/: checker.rs  lib.rs  main.rs  recorder.rs  runner.rs  status.rs
docs/: syntax.ebnf
examples/: game_of_life.b
libb/: aarch64-darwin.s  aarch64-linux.s  all.b  lib.b  x86_64-darwin.s  x86_64-linux.s
src/: arena.rs  ast.rs  codegen.rs  diagnostics.rs  ir.rs  lexer.rs  lib.rs  main.rs  parser.rs
src/ast/: print.rs  resolve.rs  visit.rs
src/lexer/: interner.rs  token.rs
src/parser/: test.rs
tests/: add.b  args11.b  args11.output  args6.b  args6.output  assign.b  assign.output  bad_case.b  bad_case.output  bad_label.b  bad_label.output  bad_literal.b  bad_literal.output  bad_lvalue.b  bad_lvalue.output  compare.b  compare.output  div_rem.b  div_rem.output  func_sema.b  func_sema.output  goto.b  goto.output  hello.b  hello.output  inc_dec.b  inc_dec.output  lexer.output  literals.b  literals.output  postfix.b  postfix.output  recursion.b  recursion.output  ref.b  ref.output  return.b  return.output  rvalue_call.b  rvalue_call.output  (+12 more)
tree-sitter-b/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-b/src/: grammar.json  node-types.json  parser.c
(+12 files in other folders)
