[package]
name = "blang"
version = "0.1.0"
edition = "2024"

[dependencies]
bstr = { version = "1.12.0", default-features = false, features = ["std", "alloc"] }
clap = { version = "4.5.40", features = ["derive"] }
cranelift = { version = "0.121.1", features = ["module", "object"] }
strum = "0.27.1"
strum_macros = "0.27.1"
