[package]
name = "blang"
version = "0.1.0"
edition = "2024"

[dependencies]
ariadne = { version = "0.5", features = ["auto-color"] }
clap.workspace = true
indexmap = "2.10"
rustc-hash = "2.1"
strum = "0.27"
strum_macros = "0.27"

# Cranelift
cranelift-codegen = { version = "0.121", default-features = false, features = ["all-native-arch", "std"] }
cranelift-frontend = "0.121"
cranelift-module = "0.121"
cranelift-object = "0.121"
target-lexicon = "0.13.2"
